Bug 415164 - ctrl+alt+(left|right) conflict on yakuake
Summary: ctrl+alt+(left|right) conflict on yakuake
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: keyboard (other bugs)
Version First Reported In: 19.07.80
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-12-14 10:13 UTC by Quentin
Modified: 2020-06-15 16:39 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.04.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Quentin 2019-12-14 10:13:24 UTC
SUMMARY

Setting ctrl+alt+(left|right) as keyboard shortcut in yakuake result in a conflict. This seems to be due to a default shortcut on konsole. Downgrading konsole to version 19.4.3 fix this issue.

The bug seems to be related to commit: https://github.com/KDE/konsole/commit/c53e8cb17e116727569cff2e287906411b832970

STEPS TO REPRODUCE
1. Install konsole & yakuake
2. Use ctrl+alt+left shortcut in yakuake


OBSERVED RESULT

Popup warning about conflicting shortuct

EXPECTED RESULT

No shortcut conflict

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora 31 / 5.3.15
(available in About System)
KDE Plasma Version: 5.16.5
KDE Frameworks Version: 5.64.0
Qt Version: 5.12.5

ADDITIONAL INFORMATION
Comment 1 fire f. 2019-12-17 13:47:41 UTC
that so many distros force that yakuake nonsense down users' throats is quite outrageous. Serious people don't need a gamified console. Run with # konsole --background-mode # parameter, Konsole offers that popup feature already.

Having said that, I did notice JWM (Joe's window manager as a replacement of kwin_x11) crashing when it tried to assign hotkeys which were in use already, say by Konsole. So one has to use non-occupied hotkeys. Its a bit quirky there.
Comment 2 Jakob Petsovits 2020-01-10 07:50:17 UTC
> that so many distros force that yakuake nonsense down users' throats
> is quite outrageous. Serious people don't need a gamified console.
> Run with # konsole --background-mode # parameter, Konsole offers
> that popup feature already.

This is good information, and new to me. Thanks for pointing it out.

That said: If Konsole offers Yakuake functionality then it very much doesn't make its existence obvious or how to use it. No mention of it in the menu, in the settings dialog, no entry in the "Configure Shortcuts..." dialog containing the strings "popup", "appear", "front", "open", "toggle", "retract" or "background". Even if I know about the existence of the --background-mode, I had to remember that there's a --help option to figure out the standard shortcut, then verify that F12 is indeed not present in the shortcuts dialog, which helps me (as somewhat veteran KDE user) to realize that it must be in the Global Shortcuts KCM instead.

Compare that to an app that advertises its visibility-toggle capability in the app description, tells you on first startup what its toggle shortcut is, offers positioning sliders in its settings dialogs and its open/retract shortcut in its main shortcut dialog, oh yeah, and can disappear upon losing focus. Nothing against Konsole, but as it stands right now there's still a place for Yakuake for slightly less "serious" users.

All of that said, shouldn't this be a Yakuake bug rather than a Konsole bug? If it's going to use Konsole shortcuts, ideally it would let me configure those inside Yakuake itself. Maybe it can unassign the default konsolepart shortcut when I choose it for a Yakuake-specific action?

Or maybe it's more suitable as a task for KDE Frameworks to tell me what the conflicting pieces are - it would be really nice to know it's coming from Konsole's shortcut list so I didn't end up searching the global shortcuts KCM in vain. Bonus points if the dialog didn't just point out that there's a conflict, but actually lets me choose which one of the two actions to execute. That would be way more useful than the current incarnation of the shortcut conflict dialog.
Comment 3 Quentin 2020-01-10 09:40:03 UTC
> shouldn't this be a Yakuake bug rather than a Konsole bug?

I choose to file it under Konsole as downgrading konsole fix it. It's either an unwanted regression or it is expected and should be fixed in Yakuake.
Comment 4 Ash 2020-02-14 23:32:47 UTC
I can confirm that downgrading from konsole 19.12.2 to 19.04.3 eliminates the conflict.
Comment 5 Axel 2020-04-29 16:50:59 UTC
Can I dock the Konsole like Yakuake?

I just delete this lines of code from src/ViewManager.cpp and compiled the 20.04 tag to fix the compatibility with Yakuake.

----
// only add default shortcut bindings for the first 9 tabs, regardless of SWITCH_TO_TAB_COUNT
if (i < 9) {
  collection->setDefaultShortcut(action, QStringLiteral("Alt+%1").arg(i + 1));
}
Comment 6 Axel 2020-06-15 16:30:50 UTC
Git commit 020f565572c1e8a6f5b7910d060c45b93e056db3 by Axel Navarro.
Committed on 13/06/2020 at 23:01.
Pushed by hindenburg into branch 'master'.

Fix shortcuts for Yakuake grow-terminal actions

Add the move-tab-to-right and move-tab-to-left actions in
ViewManager to the _multiTabOnlyActions collection to allow
override them in Yakuake with grow-terminal-right and
grow-terminal-left

M  +2    -0    src/ViewManager.cpp

https://invent.kde.org/utilities/konsole/commit/020f565572c1e8a6f5b7910d060c45b93e056db3
Comment 7 Kurt Hindenburg 2020-06-15 16:39:48 UTC
Git commit 9bb2c059b1802fcf39059b976fb76daf2bbfb89f by Kurt Hindenburg, on behalf of Axel Navarro.
Committed on 15/06/2020 at 16:33.
Pushed by hindenburg into branch 'release/20.04'.

Fix shortcuts for Yakuake grow-terminal actions

Add the move-tab-to-right and move-tab-to-left actions in
ViewManager to the _multiTabOnlyActions collection to allow
override them in Yakuake with grow-terminal-right and
grow-terminal-left
FIXED-IN: 20.04.3
(cherry picked from commit 020f565572c1e8a6f5b7910d060c45b93e056db3)

M  +2    -0    src/ViewManager.cpp

https://invent.kde.org/utilities/konsole/commit/9bb2c059b1802fcf39059b976fb76daf2bbfb89f