Fix shortcuts for Yakuake grow-terminal actions

Add the move-tab-to-right and move-tab-to-left actions in
ViewManager to the _multiTabOnlyActions collection to allow
override them in Yakuake with grow-terminal-right and
grow-terminal-left

BUG: 415164
FIXED-IN: 20.04.3
(cherry picked from commit 020f565572c1e8a6f5b7910d060c45b93e056db3)